# nomad-plugin-spectroscopy

./: .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: docs.yml  publish.yml  tests.yml
docs/: api.md  contributing.md  index.md  installation.md  mkdocs.yml  usage.md
src/nomad_plugin_spectroscopy/: __init__.py
src/nomad_plugin_spectroscopy/parsers/: __init__.py  __main__.py  manifest_parser.py  spectrum_parser.py
src/nomad_plugin_spectroscopy/schema_packages/: __init__.py  spectroscopy.py
tests/: __init__.py  conftest.py  test_basic.py
